Waxaa kusoo daray qaybta dhexe ee main ka

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 
     </div>
 
+
+    <div class="main">
+
+        <h1>Breaking News</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis pariatur et voluptatem, tenetur a libero neque nesciunt eius dolorum quam excepturi delectus minima aliquam repellat fugiat. Tempore error recusandae modi ducimus libero provident, doloribus mollitia, illum in animi eius voluptas saepe quisquam. Nisi, itaque incidunt. Esse, dicta cupiditate. Optio, sunt?</p>
+
+        <button>Read More</button>
+    </div>
+
+
+
+
+
+
     <script>
 
             const toggleButton = document.querySelector('.button');
